--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Game\Point\DetectionField.cs" />
     <Compile Include="Assets\Game\Runer\Runer.cs" />
-    <Compile Include="Assets\Game\Point\Site.cs" />
+    <Compile Include="Assets\Game\Point\Site\Site.cs" />
     <Compile Include="Assets\Game\Point\Point.cs" />
     <Compile Include="Assets\Game\Inventory\InventoryDisplay.cs" />
     <Compile Include="Assets\Game\Inventory\Inventory.cs" />
