--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Game\GameController\PlayerMouseInput.cs" />
     <Compile Include="Assets\Game\Point\Point.cs" />
     <Compile Include="Assets\Game\Inventory\InventoryDisplay.cs" />
+    <Compile Include="Assets\Game\Point\PointFiller.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
