--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Game\Inventory\InventoryDisplay.cs" />
     <Compile Include="Assets\Game\Point\PointFiller.cs" />
     <Compile Include="Assets\Game\GameController\CameraConstantWidth.cs" />
+    <Compile Include="Assets\Game\Level\Level.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
